# ModernBERT

./: CLAUDE.md  README.md  main.py  pyproject.toml  scripts_tmp_make_sample.py
src/data/: arrow_to_mds.py
tests/: test_rotary.py
yamls/modernbert/: modernbert-smoketest-pretrain.yaml
